--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -2,7 +2,7 @@
 new_page_extension: md
 auto_deploy: false
 admin_path: "/static/admin"
-webhook_url: 
+webhook_url:
 sections:
 - type: document
   path: data/camps.json
@@ -13,7 +13,7 @@ sections:
   create: documents
   match: "**/*.md"
 upload_dir: static/uploads
-public_path: "/uploads"
+public_path: "/slwc-gridsome/uploads"
 front_matter_path: ''
 use_front_matter_path: true
 file_template: ":filename:"
