update frontmatter template for page with carousel

--- a/.forestry/front_matter/templates/image-gallery-carousel.yml
+++ b/.forestry/front_matter/templates/image-gallery-carousel.yml
@@ -1,5 +1,5 @@
 ---
-label: Carousel
+label: Page With Carousel
 hide_body: false
 fields:
 - name: carousel_images
@@ -7,5 +7,13 @@ fields:
   config: {}
   label: Carousel Images
   description: A section for images that auto rotate in a carousel
+- name: slug
+  type: string
+  label: Slug
+  description: The URL where this page will live on slwc.ca
+- name: title
+  type: string
+  label: Title
+  description: Title of this page that will appear in the browser bar
 pages:
 - content/covid.md
