--- a/.forestry/front_matter/templates/image-gallery-carousel.yml
+++ b/.forestry/front_matter/templates/image-gallery-carousel.yml
@@ -8,11 +8,11 @@ fields:
   label: Carousel Images
   description: A section for images that auto rotate in a carousel
 - name: slug
-  type: string
+  type: text
   label: Slug
   description: The URL where this page will live on slwc.ca
 - name: title
-  type: string
+  type: text
   label: Title
   description: Title of this page that will appear in the browser bar
 pages:
