update image gallery with default url?

--- a/.forestry/front_matter/templates/image-gallery-carousel.yml
+++ b/.forestry/front_matter/templates/image-gallery-carousel.yml
@@ -15,5 +15,7 @@ fields:
   config: {}
   label: Carousel Images
   description: A section for images that auto rotate in a carousel
+  default:
+    - /uploads/1.jpg
 pages:
 - content/covid.md
