--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.1",
-    "gridsome": "^0.7.0"
+    "@gridsome/vue-remark": "^0.2.2",
+    "gridsome": "^0.7.0",
+    "vuetify": "^2.3.7"
+  },
+  "devDependencies": {
+    "deepmerge": "^4.2.2",
+    "fibers": "^5.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^7.3.1",
+    "style-resources-loader": "^1.3.3",
+    "vuetify-loader": "^1.6.0"
   }
 }
